2015-12-28 primitive version
Implemented the channel preset chooser.

2015-12-28 primitive version
Partially implemented the channel window.
Fixed a seeking bug.
Minor cleanups.

2015-12-27 primitive version
Implemented the play list.

2015-12-26 primitive version
Implemented the stop button, fixed several bugs.

2015-12-25 primitive version
Implemented the GUI based on the previous CLI version.