@@ -4,8 +4,8 @@ A cross-platform midi file player based on libfluidsynth and Qt.
 Currently it's still very incomplete and not suitable for everyday use.
 
 Planned features:
-* Channel mute/solo (not implemented)
-* Editing channel parameters on-the-fly (not implemented)
+* Channel mute/solo
+* Editing channel parameters on-the-fly (partially implemented)
 * Playlists (partially implemented)
 * Editing synthesizer effects (not implemented)
 * Visualization (not implemented)
