@@ -2,9 +2,11 @@
 #define QMPCHANNELSWINDOW_H
 
 #include <QLabel>
+#include <QPushButton>
 #include <QDialog>
 #include <QCloseEvent>
 #include "qmppresetselect.hpp"
+#include "qmpchanneleditor.hpp"
 
 namespace Ui {
 	class qmpchannelswindow;
@@ -24,6 +26,20 @@ class QDCLabel:public QLabel
 		void onDoubleClick(int id);
 };
 
+class QDCPushButton:public QPushButton
+{
+	Q_OBJECT
+	using QPushButton::QPushButton;
+	private:
+		int id;
+	protected:
+		void mousePressEvent(QMouseEvent *event){QPushButton::mousePressEvent(event);emit onClick(id);}
+	public:
+		void setID(int _id){id=_id;}
+	signals:
+		void onClick(int id);
+};
+
 class qmpchannelswindow:public QDialog
 {
 	Q_OBJECT
@@ -38,6 +54,7 @@ class qmpchannelswindow:public QDialog
 		void channelWindowsUpdate();
 		void channelMSChanged();
 		void showPresetWindow(int chid);
+		void showChannelEditorWindow(int chid);
 	private slots:
 		void on_pbUnmute_clicked();
 
@@ -46,6 +63,7 @@ class qmpchannelswindow:public QDialog
 	private:
 		Ui::qmpchannelswindow *ui;
 		qmppresetselect *pselectw;
+		qmpchanneleditor *ceditw;
 };
 
 #endif // QMPCHANNELSWINDOW_H
