@@ -1,4 +1,7 @@
-2015-12-28 primitive version
+2015-12-30 primitive version
+Implemented the channel parameter editor.
+
+2015-12-29 primitive version
 Implemented the channel preset chooser.
 
 2015-12-28 primitive version
